--- a/npcs/yeet_cargohlik.yaml
+++ b/npcs/yeet_cargohlik.yaml
@@ -388,7 +388,11 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    expressions:  "Get outta my face, beautiful baby"; "baby, baby, baby...you got dis"; "Ima take dat ugly tally outta da picture, see"; "What are you, drunk?"
+    expressions:
+    - "Get outta my face, beautiful baby"
+    - "baby, baby, baby...you got dis"
+    - "Ima take dat ugly tally outta da picture, see"
+    - "What are you, drunk?"
 
     #
     # Mannerisms: what does the character do with their hands?  And eyes, mouth, etc.
@@ -466,22 +470,22 @@ npc:
   specialties:
     skills:
 
-   - - Goblin Abilities:
+    - Goblin Abilities:
         - Darkvision: Can see 60 in dim light as though it was bright light and in darkness as if it was dim light           
         - Fury of the Small: When you damage a creature with an attack or a spell and the creature's size is larger than yours, you can cause the attack or spell to deal extra damage to the creature. The extra damage equals 
                              your level.
         - Nimble Escape: You can take the Disengage or Hide action as a bonus action on each of your turns.  
                   
-   - - Rogue Abilities:
+    - Rogue Abilities:
        - Expertise: Double proficiency bonus with Thieve's Tools and Sleight of Hand
        - Sneak Attack: Once per turn can add 3d6 to one creature she hits with a ranged or finesse attack if she has advantage on the attack or if the target is engaged with another creater
        - Cunning Action: Can tak a bonus action on each turn to Hide, Disengage or Dash
        - Uncanny Dodge: When an attacker she can see hits her with an attack, she can use her Reaction to halve the damage
             
-   - - Arcane Trickster Abilities:
+    - Arcane Trickster Abilities:
        - Spellcasting: Spell DC 13 
-          Cantrips: Mage Hand, Fire Bolt, Message
-          1st Level: Charm Person, Disguise Self, Feather Fall
+         Cantrips: Mage Hand, Fire Bolt, Message
+         1st Level: Charm Person, Disguise Self, Feather Fall
        - Mage Hand Legerdemain: when you cast Mage Hand, you can make the spectral hand invisible, and you can perform the following additional tasks with it - 
                                 - You can stow one object the hand is holding in a container worn or carried by another creature.
                                 - You can retrieve an object in a container worn or carried by another creature.
@@ -502,12 +506,9 @@ npc:
     - A seemingly endless bag of apples, each of which acts as a standard healing potion. 
     - Boots of the Mistwalker: These grey leather boots can enhance the Misty Step spell. The boots have three charges that can be used when the wearer uses Misty Step (via spell, item, or innate ability). If the wearer is not 
                                attuned, they can only spend a single charge at a time. Using the 2 or 3 charge abilities requires the wearer to be attuned - 
-                               1 charge: Double the range (from 30 feet to 60 feet).
-                               1 charge: May teleport to a point within range even if you cannot see it, by specifying a distance and direction. (If you end up within an object you are shunted to the nearest open space, taking 
-                                         1d10 force damage per five feet off additional distance.)
-                               2 charges: May cast Misty Step by expending 2 hit dice (and taking that much damage) instead of using a spell slot. This option will allow you to use Misty Step even if you cannot normally cast the
-                                          spell.
-                               3 charges: May bring a living creature of your size or smaller with you when you teleport. They appear in an unoccupied space within 5 feet you.
+      1 charge: Double the range (from 30 feet to 60 feet) or May teleport to a point within range even if you cannot see it, by specifying a distance and direction. (If you end up within an object you are shunted to the nearest open space, taking 
+      2 charges: May cast Misty Step by expending 2 hit dice (and taking that much damage) instead of using a spell slot. This option will allow you to use Misty Step even if you cannot normally cast the spell.
+      3 charges: May bring a living creature of your size or smaller with you when you teleport. They appear in an unoccupied space within 5 feet you.
                                The boots regain all charges at dawn. 
     - Cloak of Displacement: While you wear this cloak, it projects an illusion that makes you appear to be standing in a place near your actual location, causing any creature to have disadvantage on attack rolls against you. If
                              you take damage, the property ceases to function until the start of your next turn. This property is suppressed while you are incapacitated, restrained, or otherwise unable to move.                               
@@ -534,7 +535,6 @@ npc:
      Yeet instead. Yeet broke down and told them of how he is a Dusk Goblin and should never have been involved in this affair. He begged or his life and gave the adventuring party more than enough information to continue on 
      with achieving their objectives. He was escorted back to Rheidolen for questioning and a potential trial but, because of the lack of security and organization in this frontier town, it was easy for such a crafty Goblin to 
      escape. He now roams the wilderness and distant towns seeking other dusk Goblins.
-
       
     #
     # Personality (or something like that):
@@ -547,33 +547,3 @@ npc:
     personality: |
      Yeet is a resourceful goblin who's quick on his feet and fast of hand. He has aquired a lot of information in his travels and will pass it on for the right price. He is a slippery fellow who seems to come and got undetected
      at will. He likes to play tricks on people and enjoys causing conflict amongst others and then slipping away.
-     
-  #
-  # Content that does not get displayed, but could be useful
-  # to humans.  Includes review comments, notes about what to
-  # do for the NPC art, or whatever else we need.
-  #
-  # Optional.
-  #
-  uncategorized:
-  - uncategorized_template_1: TEMPLATE
-  - uncategorized_template_2: |
-    TEMPLATE
-    MORE TEMPLATE
-  - uncategorized_template_3: TEMPLATE
----
-
-#
-# ...Multiple NPCs can be included in one file,
-# separated by --- dividers...
-#
-© 2021 GitHub, Inc.
-Terms
-Privacy
-Security
-Status
-Docs
-Contact GitHub
-Pricing
-API
-Training
