--- a/npcs/The_Hooded_Man.yaml
+++ b/npcs/The_Hooded_Man.yaml
@@ -464,14 +464,14 @@ npc:
   #
   specialties:
     skills:
-   - - Fighter Abilities:
+    - Fighter Abilities:
        - Fighting Style: Two-Weapon Fighting
        - Second Wind: Bonus Action to regain 1d10 + Fighter Level
        - Action Surge: Once every short/long rest can take an extra action
        - Extra Attack: Can attack twice each turn
        - Indomitable: Can reroll 1 saving throw per long rest
  
-   - - Battle Master Abilities:
+    - Battle Master Abilities:
        - Combat Superiority:
          - Maneuvers: Ambush, Brace, Menacing Attack, Pushing Attack, Sweeping Attack, Trip Attack
          - Superiority Dice: 6
@@ -481,7 +481,7 @@ npc:
        - Improves Superiority: Superiority are d10s
        - Relentless: Regain superiority dice on initiative
 
-   - - Reborn Abilities:
+    - Reborn Abilities:
        - Faded Memories: Has no memory of his previous life other than his love for Anastasia Dumas
        - Darkvision: can see in dim light within 60ft.
        - Deathless Nature: 
@@ -492,13 +492,13 @@ npc:
        - Knowledge from a Past Life: When making a an ability check that uses a skill, roll a d6 and add it to the check roll. Can use this a number of times equal to proficiency bonus each long rest      
 
     special-abilities: 
-       - Feats: Dual Weilder, Heavy Armor Master, Shadow Touched: Invisibility and Darkness, Skulker, Slasher
+       - Feats: Dual Weilder, Heavy Armor Master, Shadow Touched - Invisibility and Darkness, Skulker, Slasher
        - Legendary Resistance: (3/Day), If The Hooded Man fails a saving throw he can choose to succeed instead. The Hooded Man cannot be charmed. 
        - Legendary Actions: The Hooded Man can take 3 Legendary Actions. Choosing from the options from below, Only one Legendary Action can be used at a time and only at the end of another creature's turn. 
                             The Hooded Man regains spent Legendary Actions at the start of her turn
-         - Hoods Intimidation: The Hooded Man can moan, causing anyone with 10 feet to make a DC 15 wisdon saving throw or become afraid
-         - Hoods Escape: The Hooded Man casts Misty Step
-         - Hoods Rage: The Hooded Man can reroll one damage die and take the highest roll  
+         Hoods Intimidation: The Hooded Man can moan, causing anyone with 10 feet to make a DC 15 wisdon saving throw or become afraid
+         Hoods Escape: The Hooded Man casts Misty Step
+         Hoods Rage: The Hooded Man can reroll one damage die and take the highest roll  
     attacks: |
       He will attack with both blades and use his maneuvers
     combat-tactics: |
@@ -536,33 +536,4 @@ npc:
       The Hooded Man is a massive brute of a man. He stands about 7 feet tall with his entire body obscured by his long shadowcloak. He wears full chain mail armor but it doesn't impede his movement of stealth. He rarely shows 
       his pale, discolored skin or the scars that remain from his murder. The Hooded Man doesn't have much of a personality. His return from the dead didn't leave him with much of a brain. He is silent and cannot speak, only 
       moan. He also cannot be reasoned or bargained with. Anastasia and her patron's control over him is absolute and he only does what they tell him to. He will do everything in his power to protect Anastasia, and his rage in 
-      doing so is palpable. He is single mined in his service and will kill anyone or anything he is instructed to.  
-  #
-  # Content that does not get displayed, but could be useful
-  # to humans.  Includes review comments, notes about what to
-  # do for the NPC art, or whatever else we need.
-  #
-  # Optional.
-  #
-  uncategorized:
-  - uncategorized_template_1: TEMPLATE
-  - uncategorized_template_2: |
-    TEMPLATE
-    MORE TEMPLATE
-  - uncategorized_template_3: TEMPLATE
----
-
-#
-# ...Multiple NPCs can be included in one file,
-# separated by --- dividers...
-#
-© 2021 GitHub, Inc.
-Terms
-Privacy
-Security
-Status
-Docs
-Contact GitHub
-Pricing
-API
-Training
+      doing so is palpable. He is single mined in his service and will kill anyone or anything he is instructed to.
