--- a/npcs/thane_gravelfist.yaml
+++ b/npcs/thane_gravelfist.yaml
@@ -214,6 +214,7 @@ npc:
     # Required.
     # Max length per occupation: ...
     #
+    occupation:
     - Bartender
     
 
@@ -384,7 +385,9 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    expressions:  "For the people!"; "Never underestimate the callous and cunning of the magistrates"
+    expressions:
+    - "For the people!"
+    - "Never underestimate the callous and cunning of the magistrates"
 
     #
     # Mannerisms: what does the character do with their hands?  And eyes, mouth, etc.
@@ -462,23 +465,23 @@ npc:
   specialties:
     skills: 
 
-   - - Dwarf Abilities:
+    - Dwarf Abilities:
        - Darkvision: Accustomed to life underground, you have superior vision in dark and dim conditions. You can see in dim light within 60 feet of you as if it were bright light, and in darkness as if it were dim light. You
                      can't discern color in darkness, only shades of gray
        - Dwarven Resistance: Has advantage on Saving Throws against poison, and has Resistance against poison damage
-       - Tool Proficiency: You gain proficiency with the artisan's tools of your choice: smith's tools, brewer's supplies, or mason's tools.       
+       - Tool Proficiency: You gain proficiency with the artisan's tools of your choice; smith's tools, brewer's supplies, or mason's tools.       
        - Dwarven Combat Training: Has proficiency with the Battleaxe, Handaxe, Light Hammer, and Warhammer.
        - Stonecunning: Whenever making an Intelligence (History) check related to the Origin of stonework, he is considered proficient in the History skill and adds double his Proficiency Bonus to the check, 
                       instead of his normal Proficiency Bonus
        - Dwarven Toughness: Your hit point maximum increases by 1, and it increases by 1 every time you gain a level
                             
-   - - Fighter Abilities:
+    - Fighter Abilities:
          - Fighting Style: Defense
          - Second Wind: Bonus Action to regain 1d10 + 5
          - Action Surge: Once every short/long rest can take an extra action
          - Extra Attack: Can attack twice each turn
        
-   - - Champion Abilities:
+    - Champion Abilities:
        - Improved Critical: your weapon attacks score a critical hit on a roll of 19 or 20
        
     special-abilities:
@@ -513,10 +516,6 @@ npc:
      that led to austere and deprived conditions. Families were broken and scattered. Vowing to one day return and bring his people back to their glory, Thane fled for weeks searching for a civilization within which to begin his
      life anew and share the ethical codes of his people with the world at large. Thane's inborn work ethic gained traction with village markets and it wasn't long before he had accrued enough coin to begin planning to return to
      his people. His connections to the people with whom he resettled excite him at the potential that he will not return to his home alone.
-
-
-
-
       
     #
     # Personality (or something like that):
@@ -529,33 +528,3 @@ npc:
     personality: |
      Thane is a bright young man with a big heart and a aversion to injustice. He is a hard worker and apllies that ethhic to making his patrons as comfortable as he possibly can. He intently observes local politics, though he
      has no political aspirations himself. He is keenly aware of political injustices and hopes to one day returm home and rid it of its problems.
-     
-  #
-  # Content that does not get displayed, but could be useful
-  # to humans.  Includes review comments, notes about what to
-  # do for the NPC art, or whatever else we need.
-  #
-  # Optional.
-  #
-  uncategorized:
-  - uncategorized_template_1: TEMPLATE
-  - uncategorized_template_2: |
-    TEMPLATE
-    MORE TEMPLATE
-  - uncategorized_template_3: TEMPLATE
----
-
-#
-# ...Multiple NPCs can be included in one file,
-# separated by --- dividers...
-#
-© 2021 GitHub, Inc.
-Terms
-Privacy
-Security
-Status
-Docs
-Contact GitHub
-Pricing
-API
-Training
