--- a/npcs/the_drunken_coward.yaml
+++ b/npcs/the_drunken_coward.yaml
@@ -213,8 +213,8 @@ npc:
     #
     # Required.
     # Max length per occupation: ...
-
-    - Bartender; Inkeeper
+    occupation:
+    - Bartender, Inkeeper
     
 
     #
@@ -385,7 +385,10 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    expressions:  "The ale and mouths are pouring!"; "Need not know what's next. Rest. Begin anew tomorrow"; "The mind makes the troubles"
+    expressions:
+    - "The ale and mouths are pouring!"
+    - "Need not know what's next. Rest. Begin anew tomorrow"
+    - "The mind makes the troubles"
 
     #
     # Mannerisms: what does the character do with their hands?  And eyes, mouth, etc.
@@ -463,16 +466,16 @@ npc:
   specialties:
     skills: 
 
-   - - Monk Abilities:
+    - Monk Abilities:
        - Unarmored Defense: When not wearing armor Ac = 10 + Dexterity + Wisdom
        - Martial Arts:
           - Can use Dexterity instead of Strength for the attack and damage rolls for unarmed strikes and monk weapons
           - Can roll a d6 in place of normal damage for unarmed strikes and monk weapons
           - When using an attack action with an unarmed strike or monk weapon, can make an unarmed strike as a bonus action
        - Ki: 6 Ki Points, Ki DC= 14
-          - Flurry of Blows: Immediately after and attack action, can spend 1 Ki point to make 2 unarmed strikes as a bonus action
-          - Patient Defense: Can spend 1 Ki point to take the Dodge action as a bonus action
-          - Step of the Wind:Can spend 1 Ki point to take the Disengage or Dash action as a bonus action. Jump distance is doubled for the turn
+       - Flurry of Blows: Immediately after and attack action, can spend 1 Ki point to make 2 unarmed strikes as a bonus action
+       - Patient Defense: Can spend 1 Ki point to take the Dodge action as a bonus action
+       - Step of the Wind: Can spend 1 Ki point to take the Disengage or Dash action as a bonus action. Jump distance is doubled for the turn
        - Unarmored Movement: Speed is increased by 15.
        - Deflect Missles: Can use Reaction to deflect or catch the missle when hit by a ranged weapon attack. Damage from the attack is reduced by 1d12 + 11. If damaged is reduced to 0, the missle is caught if he has one 
                           free hand. Can spend 1 Ki point to make a ranged attack with the ammunition or weapon just caught. The attack is made with proficiency and counts as a monk weapon       
@@ -481,13 +484,13 @@ npc:
        - Stunning Strike: When hits a creature with a melee weapon attack, can spend 1 Ki point and that creature must make a constitution saving throw or be stunned until the end of his next turn
        - Ki-Empowered Strike: your unarmed strikes count as magical for the Purpose of overcoming Resistance and immunity to nonmagical attacks and damage.
                             
-   - - Way of the Drunken Master Abilities:
+    - Way of the Drunken Master Abilities:
          - Drunken Technique: you learn how to twist and turn quickly as part of your Flurry of Blows. Whenever you use Flurry of Blows, you gain the benefit of the Disengage action, and your walking speed increases by 10 feet
                               until the end of the current turn.
          - Tipsy Sway: you can move in sudden, swaying ways. You gain the following benefits.
-                       Leap to Your Feet: When you're prone, you can stand up by spending 5 feet of movement, rather than half your speed.
-                       Redirect Attack: When a creature misses you with a melee attack roll, you can spend 1 ki point as a reaction to cause that attack to hit one creature of your choice, other than the attacker, that you can
-                                        see within 5 feet of you.
+           Leap to Your Feet: When you're prone, you can stand up by spending 5 feet of movement, rather than half your speed.
+           Redirect Attack: When a creature misses you with a melee attack roll, you can spend 1 ki point as a reaction to cause that attack to hit one creature of your choice, other than the attacker, that you can
+                            see within 5 feet of you.
        
     special-abilities:
        - Proficiencies: Persuasion, Performance, Athletics, Acrobatics 
@@ -521,8 +524,6 @@ npc:
      and dismayed, he informed her of their new compromised financial position. "You drunken coward," she condemned, "you've let your father down." Firmoore's mother passed away not long after. Left without roots, Firmoore 
      traveled the region in search of another place to call home. Over his travels he earned significant sums fighting in pits and cages with the ardent fervor of unfulfilled revenge fueling his ferocity. Eventually finding
      comfort in the town of Hiraas Calling, he used the purses he collected from his brief fighting career to open the Drunken Coward, a name he uses not only for his establishment but also for himself.
-
-
       
     #
     # Personality (or something like that):
@@ -536,33 +537,3 @@ npc:
      Firmoore, The Drunken Coward, is a man who has adopted and lives up to his name. He wears his shame as a badge and lives under the cloud of his father's unavenged death. He does his best to maintain his inn and provide the
      best hospitality possible. Unforunately, his alcoholism does get the best of him a lot of the time. He generally tries to avoid conflict, but now and again is called upon to bounce unruly, at which point, he takes the
      opportunity to take out his pent up aggression.
-     
-  #
-  # Content that does not get displayed, but could be useful
-  # to humans.  Includes review comments, notes about what to
-  # do for the NPC art, or whatever else we need.
-  #
-  # Optional.
-  #
-  uncategorized:
-  - uncategorized_template_1: TEMPLATE
-  - uncategorized_template_2: |
-    TEMPLATE
-    MORE TEMPLATE
-  - uncategorized_template_3: TEMPLATE
----
-
-#
-# ...Multiple NPCs can be included in one file,
-# separated by --- dividers...
-#
-© 2021 GitHub, Inc.
-Terms
-Privacy
-Security
-Status
-Docs
-Contact GitHub
-Pricing
-API
-Training
