--- a/npcs/thomdrick_holecarver.yaml
+++ b/npcs/thomdrick_holecarver.yaml
@@ -362,7 +362,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    introduction:  "Oi Thom! Go start tha hole" shouts the Drow at the filthily-dressed gray-skinned Dwarf coming out of the back room 
+    introduction: /"Oi Thom! Go start tha hole"/ the Drow shouts at the filthily-dressed gray-skinned Dwarf coming out of the back room 
 
     #
     # Appearance: a brief description of the character skin, clothes, hair, eyes, etc.
@@ -389,7 +389,10 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    expressions:  "Whacha want buried with this one boss?" "Right, extra deep fer this grave" "Sorry bout yer loss, better you than me"
+    expressions:
+    - "Whacha want buried with this one boss?"
+    - "Right, extra deep fer this grave"
+    - "Sorry bout yer loss, better you than me"
 
     #
     # Mannerisms: what does the character do with their hands?  And eyes, mouth, etc.
@@ -465,15 +468,15 @@ npc:
   #
   specialties:
     skills:
-   - - Duergar Abilities:
+    - Duergar Abilities:
        - Superior Darkvision: See 120 in like bright light in dim light and like dim light in darkness
        - Duergar Resilience: Advantage on saving throws against illusions and phantasms and against being charmed, paralyzed, and poisoned with alchemical poisons
        - Sunlight Sensitivity: disadvantage on attack and perception roles in direct sunlight
        - Duergar Magic: Can cast Enlarge and Invisibility once per long rest with intelligence as spellcasting ability
        - Duergar Weapons Training: Proficient with Battleaxe, Handaxe, Light Hammer and Warhammer
     
-   - - Undertaker Abilities: 
-       - Skill Proficiencies: Medicine, Religion: Burial Rites, History: Burial Rites
+    - Undertaker Abilities: 
+       - Skill Proficiencies: Medicine, Religion - Burial Rites, History - Burial Rites
        - Tool Proficiencies: Carpenter's Tools, Stonecarver's Tools, Sewnig Kit    
 
     special-abilities: 
@@ -518,32 +521,3 @@ npc:
       Thomdrick Holecarver is a very typical looking Duergar; He's short, wide and wirey. He has gray, ashey skin and a long, scruffy, unkempt beard. He dresses in dirty work overalls and a brown "Andy Capp" style hat 
       pulled down low over his eyes and bald head. He is a gruff and simple man. He works hard, he drinks hard, he fights hard, and would stab you in the throat as soon as look at you. He's hard to get along with and with 
       the exception of Silas, he prefers to keep to himself and do his work, but he wont back down from anyone.
-  #
-  # Content that does not get displayed, but could be useful
-  # to humans.  Includes review comments, notes about what to
-  # do for the NPC art, or whatever else we need.
-  #
-  # Optional.
-  #
-  uncategorized:
-  - uncategorized_template_1: TEMPLATE
-  - uncategorized_template_2: |
-    TEMPLATE
-    MORE TEMPLATE
-  - uncategorized_template_3: TEMPLATE
----
-
-#
-# ...Multiple NPCs can be included in one file,
-# separated by --- dividers...
-#
-© 2021 GitHub, Inc.
-Terms
-Privacy
-Security
-Status
-Docs
-Contact GitHub
-Pricing
-API
-Training
