--- a/npcs/trileah_mcallistair.yaml
+++ b/npcs/trileah_mcallistair.yaml
@@ -213,6 +213,7 @@ npc:
     #
     # Required.
     # Max length per occupation: ...
+    occupation:
     - Bartender
     
 
@@ -367,7 +368,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    appearance:   He's mostly bald with a thick unkempt mustache and a five o'clock shadow, sloppily dressed and bags under his eyes
+    appearance:   She's mostly bald with a thick unkempt mustache and a five o'clock shadow, sloppily dressed and bags under her eyes
 
     #
     # Expressions: things the character says all the time, making their speech distinctive.
@@ -383,8 +384,9 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    expressions:  Unusually surly and leathery for a halfling. Bald head, no eyebrows. Sleeveless tunic and tight felt jerkins.
-
+    expressions:  
+    - "Git yer ale and grub in ya and keep it down. This is a classy joint"
+    - "None can make this world better"
     #
     # Mannerisms: what does the character do with their hands?  And eyes, mouth, etc.
     # Do they tap their feet incessantly?  sniff their own underarms to figure out where the odour
@@ -396,7 +398,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    mannerisms:   "Git yer ale and grub in ya and keep it down. This is a classy joint"; "None can make this world better"
+    mannerisms: Unusually surly and leathery for a halfling. Bald head, no eyebrows. Sleeveless tunic and tight felt jerkins.
 
   acting:
     #
@@ -461,7 +463,7 @@ npc:
   specialties:
     skills: 
 
-   - - Halfling Abilities:
+    - Halfling Abilities:
        - Lucky: When rolling a 1 on The D20 for an Attack roll, ability check, or saving throw, can reroll the die and must use the new roll           
        - Brave: Has advantage on Saving Throws against being Frightened 
        - Halfling Nimbleness: can move through the space of any creature that is of a size larger than her
@@ -494,10 +496,6 @@ npc:
      might have. A family of artists and musicians might sound fun, but it was all the sound that She reflects on with contempt. Trileah was born with a strange condition that impacted her body's finer functions: growing hair, 
      sensory perception, etcetera. Her hair would grow in clumps and sometimes not at all. Her senses are not heightened but, rather, highly irritable. Particularly her ears. This didn't bode well in a noisy household and she 
      grew a serious disdain for loud noises.
-
-
-
-
       
     #
     # Personality (or something like that):
@@ -509,34 +507,4 @@ npc:
     #
     personality: |
      Trileah's rare condition has left her less than personable, an odd countenance for someone in her profession. She is gruff and sury and regularly berates her clientel, yet for some reason they kep on coming back for more 
-     abuse. She lives for peace and quiet and likes nothing more than to be left alone,
-     
-  #
-  # Content that does not get displayed, but could be useful
-  # to humans.  Includes review comments, notes about what to
-  # do for the NPC art, or whatever else we need.
-  #
-  # Optional.
-  #
-  uncategorized:
-  - uncategorized_template_1: TEMPLATE
-  - uncategorized_template_2: |
-    TEMPLATE
-    MORE TEMPLATE
-  - uncategorized_template_3: TEMPLATE
----
-
-#
-# ...Multiple NPCs can be included in one file,
-# separated by --- dividers...
-#
-© 2021 GitHub, Inc.
-Terms
-Privacy
-Security
-Status
-Docs
-Contact GitHub
-Pricing
-API
-Training
+     abuse. She lives for peace and quiet and likes nothing more than to be left alone
