--- a/npcs/tzipporah_dumas.yaml
+++ b/npcs/tzipporah_dumas.yaml
@@ -390,7 +390,10 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    expressions:  "Buy a girl a drink?", "My cousin says that all the time!", "My cousin taught me how to play that card game!"
+    expressions:
+    - "Buy a girl a drink?"
+    - "My cousin says that all the time!"
+    - "My cousin taught me how to play that card game!"
 
     #
     # Mannerisms: what does the character do with their hands?  And eyes, mouth, etc.
@@ -466,14 +469,14 @@ npc:
   #
   specialties:
     skills:
-   - - Fighter Abilities:
+    - Fighter Abilities:
        - Fighting Style: Two-Weapon Fighting
        - Second Wind: Bonus Action to regain 1d10 + Fighter Level
        - Action Surge: Once every short/long rest can take an extra action
        - Extra Attack: Can attack twice each turn
        - Indomitable: Can reroll 1 saving throw per long rest
  
-   - - Gunslinger Traits:
+    - Gunslinger Traits:
        - Firearm Proficiency: you gain proficiency with firearms, allowing you to add your proficiency bonus to attacks made with firearms.
        - Gunsmith: you gain proficiency with Tinker’s Tools. You may use them to craft ammunition at half the cost, repair damaged firearms, or even draft and create new ones (DM’s discretion). Some extremely experimental and 
                    intricate firearms are only available through crafting.
@@ -482,13 +485,13 @@ npc:
        - Rapid Repair: you learn how to quickly attempt to fix a jammed gun. You can spend a grit point to attempt to repair a misfired (but not broken) firearm as a bonus action
        - Trick Shots: Deadeye Shot, Forceful Shot, Piercing Shot, Violent Shot  
 
-   - - Rogue Abilities: 
+    - Rogue Abilities: 
        - Sneak Attack: Once per turn she can deal an extra 5d6 damage if she hits an attack with advantage
        - Cunning Action: Once per turn she can take a bonus action to Dash, Disengage or Hide
        - Uncanny Dodge: Can use her reaction to halve an attack's damage
        - Evasion: Dexterity saving throws to take half damage take no damage and failed throws take half damage
        
-   - - Assassin Abilities:
+    - Assassin Abilities:
        - Assassinate: You have advantage on attack rolls against any creature that hasn't taken a turn in the combat yet. In addition, any hit you score against a creature that is surprised is a critical hit
        - Infiltration: you can unfailingly create false identities for yourself. You must spend seven days and 25 gp to establish the history, profession, and affiliations for an identity. You can't establish an identity that 
                        belongs to someone else. For example, you might acquire appropriate clothing, letters of introduction, and official- looking certification to establish yourself as a member of a trading house from a remote
@@ -496,7 +499,7 @@ npc:
                        reason not to.       
 
     special-abilities: 
-       - Feats: Dual Weilder, Gunner, Sharpshooter, Shadow Touched: Invisibility and Darkness, Skulker
+       - Feats: Dual Weilder, Gunner, Sharpshooter, Shadow Touched - Invisibility and Darkness, Skulker
        - Legendary Resistance: (1/Day), If Tzipporah Dumas fails a saving throw she can choose to succeed instead. She is Immune to fear
   
     attacks: |
@@ -535,33 +538,4 @@ npc:
     personality: |
       Tzipporah Dumas is a slight, little, slip of a girl with hip-length, dark brown hair and big violet eyes. She is so enamored with her cousin, she has even taken up dressing like him. She is wild and carefree with 
       very little respect for authority, especially that of her "stuffy" father Basil. The only authority figure she seems to respond to at all is Nicodeamus. She is obsessed with her cousin and hopes to one day either 
-      replace or join Irini as his wife. Though not the sharpest knife in the drawer, Tzipporah is completely fearless and will have a go at pretty much anyone or anything at anytime. 
-  #
-  # Content that does not get displayed, but could be useful
-  # to humans.  Includes review comments, notes about what to
-  # do for the NPC art, or whatever else we need.
-  #
-  # Optional.
-  #
-  uncategorized:
-  - uncategorized_template_1: TEMPLATE
-  - uncategorized_template_2: |
-    TEMPLATE
-    MORE TEMPLATE
-  - uncategorized_template_3: TEMPLATE
----
-
-#
-# ...Multiple NPCs can be included in one file,
-# separated by --- dividers...
-#
-© 2021 GitHub, Inc.
-Terms
-Privacy
-Security
-Status
-Docs
-Contact GitHub
-Pricing
-API
-Training
+      replace or join Irini as his wife. Though not the sharpest knife in the drawer, Tzipporah is completely fearless and will have a go at pretty much anyone or anything at anytime.
